--- a/schoolwork/Diary/style.css
+++ b/schoolwork/Diary/style.css
@@ -16,7 +16,9 @@ body {
 .topnav {
   margin: 0 auto;
   height: 30px;
-  background-color: rgb(101, 78, 103);
+  background: #FF0099;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to top, #493240, #FF0099);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top, #493240, #FF0099); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   text-align: center;
   padding: 1.5em;
 }
@@ -71,7 +73,9 @@ main {
 }
 .sidenav {
   height: 800px;
-  background-color: rgb(101, 78, 103);
+  background: #FF0099;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to top, #493240, #FF0099);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top, #493240, #FF0099); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   padding: 1.5em;
 }
 .sidenav a {
