--- a/schoolwork/Diary/style.css
+++ b/schoolwork/Diary/style.css
@@ -97,6 +97,7 @@ background: linear-gradient(to top, #3c1053, #ad5389); /* W3C, IE 10+/ Edge, Fir
   color: white;
   padding: 0.5em;
   margin: 0.8em;
+  box-shadow: inset 0 0 3 black;
 }
 ul ul {
   display: none;
@@ -119,7 +120,9 @@ iframe[seamless] {
 }
  /* -------FOOTER AREA-------- */
 footer {
-  background-color: rgb(101, 78, 103);
+  background: #ad5389;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to top, #3c1053, #ad5389);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top, #3c1053, #ad5389); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   text-align: center;
   height: 30px;
   padding: 10px;
