--- a/schoolwork/Diary/style.css
+++ b/schoolwork/Diary/style.css
@@ -97,7 +97,7 @@ background: linear-gradient(to top, #3c1053, #ad5389); /* W3C, IE 10+/ Edge, Fir
   color: white;
   padding: 0.5em;
   margin: 0.8em;
-  box-shadow: inset 0 0 3 black;
+  box-shadow: inset 0 0 3px rgb(59, 37, 55);
 }
 ul ul {
   display: none;
